// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PercentageCell component PercentageCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="gds-amount-field"
              inputmode="numeric"
              name="data"
              type="text"
              value="12.34 %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="gds-amount-field"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <span
              class="gds-amount-field amount-field-read-only table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              12.34 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="ellipsis"
        >
          <div
            class="gds-field-group"
          >
            <input
              class="gds-amount-field"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <span
              class="gds-amount-field amount-field-read-only table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              12.34 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <input
              class="gds-amount-field"
              inputmode="numeric"
              name="data"
              type="text"
              value=" %"
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`PercentageCell component PercentageCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <span
              class="gds-amount-field amount-field-read-only table--cell-value--negative table--cell-value--percentage-readonly"
              id="data"
              name="data"
            >
              -43.21 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
